[fix] : move stars behind the pillars.

--- a/client/src/components/Footer/style.module.css
+++ b/client/src/components/Footer/style.module.css
@@ -11,6 +11,7 @@
   padding-top: 3px;
   font-size: 23px;
   font-family: "Montserrat", "Raleway", sans-serif;
+  z-index:20;
 }
 
 .footer_content {
